--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "recharts": "^2.15.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
